<resources>
    <string name="app_name">MediMemory</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MediMemory</string>
    <string name="title_name">Name des Medikamentes</string>
    <string name="edit_name">Name des Medikamentes eingeben</string>
    <string name="dialog_title_photo">Foto wählen/ erstellen</string>
    <string name="title_reminder">Einnahmezeit</string>
    <string name="title_duration">Dauer der Einnahme</string>
    <string name="title_dosage">Dosierung</string>
    <string name="title_foodinstruction">Ernährungsanweisung</string>
    <string name="rd_before">Vor dem Essen</string>
    <string name="rd_after">Nach dem Essen</string>
    <string name="rd_during">Während dem Essen</string>
    <string name="rd_none">Keine Ernährungsanweisung</string>
    <string name="btn_mediSafe">Speichern</string>
    <string name="rd_numberOfDays">Beschränkt</string>
    <string name="rd_always">Kontinuierlich</string>
    <string name="rd_reminderHour">stündlich</string>
    <string name="rd_reminderDaily">täglich</string>
    <string name="rd_reminderWeekly">wöchentlich</string>
    <string name="btn_selectPhoto">Foto auswählen</string>
    <string name="nav_registration">Erfassung</string>
    <string name="nav_edit">Bearbeitung</string>
    <string name="nav_list">Übersicht</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_help">Hilfe</string>
    <string name="nav_header_subtitle">Ein kleiner Beispieltext</string>
    <string name="iv_contentDescription">Ausgewähltes Tablettenblatt</string>
    <string name="btn_HourTime">Intervall auswählen</string>
    <string name="btn_weekTime">Wochentag und Uhrzeit wählen</string>
    <string name="duration">Das Medikament muss </string>
    <string name="txt_durationOneDay"> Tag eingenommen werden</string>
    <string name="txt_durationMoreDays"> Tage eingenommen werden</string>
    <string name="txt_durationAlways">Einnahme: unbeschränkt</string>
    <string name="txt_dosageInitial">Dosierung: 1 Tablette pro Einnahme</string>
    <string name="txt_dosageOne">Dosierung:</string>
    <string name="txt_dosageOneTab"> Tablette pro Einnahme</string>
    <string name="txt_dosageMore">Pro Einnahme müssen </string>
    <string name="txt_dosageMoreTab"> Tabletten pro Einnahme</string>
    <string name="btn_dayTime">Uhrzeit einstellen</string>
    <string name="d_npHour">Einnahme Intervall</string>
    <string name="d_selectPhoto">Foto aufnehmen</string>
    <string name="d_chooseLibrary">Foto aus Galerie auswählen</string>
    <string name="cancel">Abbruch</string>
    <string name="d_selectFile">Wähl ein Foto aus</string>
    <string name="tp_timeTitle">Wähle eine Erinnerungszeit aus</string>
    <string name="d_chooseWeek">Wähle ein Wochentag aus</string>
    <string name="d_durationTitle">Enddatum angeben</string>
    <string name="d_weekTitle">Wähle einen Wochentag aus</string>
    <string name="ok">OK</string>
    <string name="d_hourTitle">Wähle eine Uhrzeit aus</string>
    <string name="next">Weiter</string>
    <string name="d_startTime">Wähle eine Startzeit aus</string>
    <string name="title_notes">Notizen</string>
    <string name="hint_notes">Geben Sie weitere Informationen ein</string>
    <string name="rd_packageEnd">Bis Packung Ende</string>
    <string name="chk_morning">Morgen</string>
    <string name="chk_noon">Mittag</string>
    <string name="chk_afternoon">Nachmittag</string>
    <string name="chk_evening">Abend</string>
    <string name="chk_night">Nacht</string>
    <string name="chk_individual">Benutzerdefiniert</string>
    <string name="pref_reminder">Erinnerungen</string>
    <string name="Summary_morning_reminder">Einnahmeerinnerung Morgen</string>
    <string name="title_morning_reminder">Einnahmeerinnerung Morgen</string>
    <string name="Summary_noon_reminder">Einnahmeerinnerung Mittag</string>
    <string name="title_noon_reminder">Einnahmeerinnerung Mittag</string>
    <string name="Summary_evening_reminder">Einnahmeerinnerung Abend</string>
    <string name="title_evening_reminder">Einnahmeerinnerung Abend</string>
    <string name="Summary_night_reminder">Einnahmeerinnerung Nacht</string>
    <string name="title_night_reminder">Einnahmeerinnerung Nacht</string>
    <string name="pref_notifications">Benachrichtigungen</string>
    <string name="title_ringtone">Klingelton</string>
    <string name="title_vibration">Vibration</string>
    <string name="pref_foodinstruction">Ernährungsanweisung</string>
    <string name="Summary_after_food">Einnahmeerinnerung vor dem Essen</string>
    <string name="title_after_food">Einnahmeerinnerung nach dem Essen</string>
    <string name="Summary_before_food">Einnahmeerinnerung nach dem Essen</string>
    <string name="title_before_food">Einnahmeerinnerung vor dem Essen</string>
    <string name="title_reminder_time">Tageszeit</string>
    <string name="chk_more">Mehr</string>
    <string name="txt_duration_till">Sie nehmen das Medikament bis am </string>
    <string name="d_packagEnd">Anzahl Blister in Verpackung</string>
    <string name="txt_durationPackageEnd">In der Packung hat es</string>
    <string name="pill">Tabletten</string>
    <string name="txt_eatBefore">Einnahme: Vor dem Essen</string>
    <string name="txt_eatDuring">Einnahme: Während dem Essen</string>
    <string name="txt_eatAfter">Einnahme: Nach dem Essen</string>
    <string name="txt_duration_numberOfPills">In der Packung hat es</string>
    <string name="chooseDate">Wähle ein Datum aus</string>
    <string name="blister">Blister</string>
    <string name="desc_pillPhoto">Pill Photo</string>
    <string name="help_text">Diese App dient zur Hilfe der Einnahme von Medikamenten. \n\nIn einem ersten Schritt können dabei die Medikamentendaten erfasst werden. Durch ein Foto werden die Anzahl Tabletten automatisch erfasst. \n\nDurch Erinnerungen werden Sie zuverlässig an die Einnahme des Medikamentes erinnert.</string>
    <string name="rd_daytime">Tageszeit</string>
    <string name="rd_interval">Intervall</string>
    <string name="reminderTake">Sie nehmen das Medikament</string>
    <string name="reminderDayTime">Sie nehmen das Medikament am</string>
    <string name="reminderInterval">Sie nehmen das Medikament alle</string>
    <string name="nothingSelected">Sie haben nichts ausgewählt</string>
    <string name="morning">Morgen</string>
    <string name="noon">Mittag</string>
    <string name="evening">Abend</string>
    <string name="night">Nacht</string>
    <string name="hour">Stunde</string>
    <string name="day">Tag</string>
    <string name="week">Woche</string>
    <string name="hourMult">Stunden</string>
    <string name="dayMult">Tage</string>
    <string name="weekMult">Wochen</string>
    <string name="taking">Einnahme:</string>
    <string name="every">all</string>
    <string name="everyHour">Jede Stunde </string>
    <string name="everyDay">Jeden Tag</string>
    <string name="everyWeek">Jede Woche</string>
    <string name="durationTime">Einnahmedauer:</string>
    <string name="always">unbeschränkt</string>
    <string name="till">bis</string>
    <string name="dosage">Dosierung:</string>
    <string name="perTaking">pro Einnahme</string>
    <string name="beforeFood">Vor dem Essen</string>
    <string name="duringFood">Während dem Essen</string>
    <string name="afterFood">Nach dem Essen</string>
    <string name="title_intervalDialog">Intervall der Einnahme</string>
    <string name="d_per">mal pro</string>
    <string name="btn_endtime">Endzeit</string>
    <string name="Startzeit">Startzeit</string>
    <string name="btn_startEndAlways">durchgehend</string>
    <string name="title_chooseStartTime">Startzeit auswählen</string>
    <string name="title_chooseEndTime">Endzeit auswählen</string>
    <string name="txt_dosage">Dosierung:</string>
    <string name="reminder">Erinnerung:</string>
    <string name="minutes">Minuten</string>
    <string name="title_reminderDaytime">Tageszeit der Einnahme</string>
    <string name="btn_delete">Löschen</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="title_dialogWeekday">Wochentag wählen</string>
    <string name="on">am</string>
    <string name="from">von</string>
    <string name="dialog_nameMessage">Bitte gib einen Namen ein!</string>
    <string name="dialog_photoMessage">Bitte nimm ein Foto auf!</string>
    <string name="dialog_reminderMessage">Bitte wähle eine Einnahmezeit aus!</string>
    <string name="dialog_durationMessage">Bitte wähle eine Dauer der Einnahme aus!</string>
    <string name="dialog_reminderDaytimeMessage">Bitte wähle mindestens eine Einnahmezeit aus!</string>
    <string name="dialog_foodInstructionMessage">Bitte wähle eine Ernährungsanweisung der Einnahme aus!</string>
    <string name="dialog_Medisave">Ihr Medikament wurde gespeichert</string>
    <string name="um" >um</string>
    <string name="at">um</string>
    <string name="title_chooseTime">Uhrzeit wählen</string>
    <string name="title_dialogDelete">Willst du das Medikament wirklich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="iBtn_helpName">help</string>
    <string name="pref_help">Hilfe</string>
    <string name="title_showHelp">Hilfetext anzeigen</string>
    <string name="question_1">Was ist MediMemory?</string>
    <string name="question_2">Wie kann ich ein Medikament hinzufügen?</string>
    <string name="question_3">Wie kann ich ein Medikament löschen?</string>
    <string name="question_4">Wie kann ich ein Medikament bearbeiten?</string>
    <string name="question_5">Wozu dient das Häckchen vor dem Medikament im Bearbeitungsbildschirm</string>
    <string name="question_6">Wozu muss ein Foto aufgenommen werden?</string>
    <string name="question_7">Wozu ist der „+“ Knopt unten rechts?</string>
    <string name="question_8">Was bedeuten die Symbole in der Übersicht?</string>
    <string name="question_9">Wo kann ich Erinnerungszeiten ändern?</string>
    <string name="question_10">Wie kann ich Erinnerungen vor/ nach Mahlzeiten anpassen?</string>
    <string name="question_11">Wie kann ich den Erinnerungston anpassen?</string>
    <string name="question_12">Wozu dient der Schutzmodus?</string>
    <string name="question_13">Wozu sind die „?“ in der Erfassung?</string>
    <string name="answer_1">MediMemory soll dazu dienen Medikamente regelmässig einzunehmen. Es erinnert dazu zuverlässig an die Einnahme und stellt alle einzunehmenden Medikamente übersichtlich dar.</string>
    <string name="answer_2">Im Erfassungsbildschirm können Medikamente einfach hinzugefügt werden. Dazu sollen allen nötigen Daten angegeben werden und mit „Speichern“ bestätigt werden.</string>
    <string name="chk_pillTake">Eingenommen</string>
    <string name="chk_pillForgot">Vergessen</string>
    <string name="chk_pillLost">Verloren</string>
    <string name="txt_taken">Eingenommen</string>
    <string name="txt_next">Nächste Pille</string>
    <string name="txt_lost">Verloren</string>
    <string name="txt_forgot">Vergessen</string>
    <string name="title_protection">Schutzmodus</string>
    <string name="pref_general">Allgemein</string>
    <string name="consumeAll">alle einnehmen</string>
    <string name="notify_dialog_title">Wähle eingenommene Medis!</string>
</resources>