<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_list" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_add"
            android:title="@string/nav_registration" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/nav_edit" />
    </group>


    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_help" />
    </group>

</menu>
