<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_dialog_title"
        android:id="@+id/title_dialog"
        android:textStyle="bold"
        android:visibility="visible"
        android:layout_gravity="top"
        android:textSize="21sp"/>

    <ListView
        android:layout_below="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonHolder"
        android:id="@+id/lv_notify" />

    <LinearLayout
        android:id="@+id/ButtonHolder"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumeAll"
            android:id="@+id/okButton"
            android:background="@drawable/btn_layout"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="consumeSelectedPills"/>

        <Button
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/abortButton"
            android:background="@drawable/btn_layout"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_margin="8dp"
            android:onClick="abortSelection"/>
    </LinearLayout>

</RelativeLayout>